# SkinCancerClassification

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  pyproject.toml
.dvc/: config
SkinCancerClassification/: .gitignore  infer.py  model.py  test.py  train.py  trainer.py
configs/: config.yaml
configs/data_loading/: data_loading.yaml
configs/infer/: infer.yaml
configs/logging/: logging.yaml
configs/model/: model.yaml
configs/testing/: testing.yaml
configs/training/: training.yaml
data/: .gitignore  test.dvc  train.dvc  valid.dvc
models/: model_val_loss=0.26.ckpt.dvc
